--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,48 @@
   font-family: sans-serif;
   text-align: center;
 }
-
-.ToDo .tasks {
+.ToDo {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.input-container {
+  display: flex;
+  align-items: stretch;
+  margin-bottom: 10px;
+}
+
+.input {
+  flex: 1;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 10px 10px 10px 10px;
+}
+
+.Task {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 8px 15px;
+  background-color: #f2f2f2;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.tasks {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.buttonTasks {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 8px 15px;
+  background-color: #e6f2ff;
+  border: 1px solid #3366cc;
+  border-radius: 5px;
+  cursor: pointer;
 }
